--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <header>
         <h1>TinyURL Java Project</h1>
+        <p><a href="https://github.com/shectmandaniel/TinyUrl" target="_blank">Project Repository</a></p>
     </header>
     <main>
-        <section>
-            <h2>Overview</h2>
+        <section class="intro">
+            <img src="https://via.placeholder.com/800x200?text=URL+Shortening+Service" alt="URL Shortening">
             <p>This project is a URL shortening service built with Java and Spring Boot. It utilizes Redis for temporary storage, MongoDB for user data management, and Cassandra for scalable data storage.</p>
         </section>
         <section>
@@ -136,7 +137,8 @@ cd &lt;repository-directory&gt;</code></pre>
         </section>
     </main>
     <footer>
-        <p>Created by Daniel Shechtman</p>
+        <p>Created by Your Name</p>
+        <p><a href="https://github.com/shectmandaniel/TinyUrl" target="_blank">Project Repository</a></p>
     </footer>
 </body>
 </html>
