--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="intro">
-            <img src="https://via.placeholder.com/800x200?text=URL+Shortening+Service" alt="URL Shortening">
+            <img src="images/shornter.jpg" alt="URL Shortening">
             <p>This project is a URL shortening service built with Java and Spring Boot. It utilizes Redis for temporary storage, MongoDB for user data management, and Cassandra for scalable data storage.</p>
         </section>
         <section>
